# pra_django_graphene

./: README.md  db.sqlite3  pyproject.toml
cookbook/: schema.py  settings.py  urls.py
cookbook/ingredients/: apps.py
cookbook/ingredients/migrations/: 0001_initial.py
