[tool.poetry]
name = "cookbook"
version = "0.1.0"
description = ""
authors = ["yoshiyasugimoto"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
